Fixed the .bio-container text to no longer overflow its box at really high screen widths.

--- a/less/index.less
+++ b/less/index.less
@@ -144,7 +144,7 @@ header {
 		border: 1px solid black;
 		height: 40px;
 		width: 150px;
-		border-radius: 10px;
+		border-radius: 2px;
 	}
 
 @media(max-width: 800px) {
@@ -243,17 +243,17 @@ header {
 	height: 50vw;
 
 	.bio-info {
-		padding-left: 10%;
+		padding-left: 7%;
 		line-height: 1.5;
 		max-height: 100%;
 
 		h2 {
-			font-size: calc(20px + (38 - 20) * ((100vw - 300px) / (1600 - 300)));
+			font-size: calc(26px + (32 - 26) * ((100vw - 300px) / (1900 - 500)));
 			margin-bottom: 35px;
 		}
 
 		p {
-			font-size: calc(16px + (28 - 16) * ((100vw - 300px) / (1600 - 300)));
+			font-size: calc(20px + (24 - 20) * ((100vw - 300px) / (1900 - 500)));
 		}
 	}
 
